2002-11-29  olicha  <olivier.chapuis@free.fr>

	* fvwm/commands.h (enum):
	* fvwm/functable.c (func_table):
	* fvwm/builtins.c (CMD_LocalePath):
	* libs/FGettext.c (FGettextSetLocalePath):
	* libs/FGettext.h:
	Preparation for LocalePath command

	* fvwm/screen.h (ScreenInfo):
	* fvwm/fvwm.c (CreateGCs):
	Rename Scr.TileGC to Scr.BordersGC

	* acinclude.m4:
	A libintl autoconf fix

	* libs/Colorset.c (CreateBackgroundPixmap):
	Do not grab the server when we dump the E setroot pixmap

2002-11-29  olicha  <olivier.chapuis@free.fr>

	* acconfig.h:
	* fvwm/Makefile.am:
	* Makefile.am:
	* configure.in:
	* acinclude.m4:
	Added NLS support with gnu gettext

	* fvwm/fvwm.c (main):
	FGettextInit

	* fvwm/expand.c (expand_vars_extended):
	New extanded variable $[gt.any_string]

	* fvwm/virtual.c (CMD_DesktopName):
	* fvwm/windowlist.c (get_desk_title):
	* fvwm/expand.c (expand_vars_extended):
	* fvwm/fvwm.c (SetRCDefaults):
	* fvwm/ConfigFvwmSetup:
	Mark some strings to be translated

	* libs/FGettext.c (new file): 
	* libs/FGettext.c (new file):
	* libs/Makefile.am:
	gnu gettext libintl warper

2002-11-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (RestoreWithdrawnLocation):
	rixed rxvts with S/E gravity travelling off screen upon recapture after
	they were resized.

	* fvwm/events.c (__handle_key_event):
	* fvwm/bindings.c (activate_binding):
	(__rebind_global_key):
	fixed unbinding pointerkey bindings removing the grab for this key
	completely

	* fvwm/events.c (__is_bpress_window_handled):
	fixed click on override redirect windows being handled by the root
	window

	* fvwm/misc.c (GrabEm):
	confine the pointer to the root window when grabbed

	* fvwm/events.c (HandleUnmapNotify):
	fixed reparenting problem with restarts from desks != 0

2002-11-28  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c:
	removed experimental code

2002-11-28  olicha  <olivier.chapuis@free.fr>

	* fvwm/borders.c (border_get_border_background):
	(border_draw_decor_to_pixmap):