@@ -1,3 +1,8 @@
+2002-11-29  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/bindings.c (ParseBinding):
+	fix for stroke-less compile
+
 2002-11-29  olicha  <olivier.chapuis@free.fr>
 
 	* fvwm/commands.h (enum):
@@ -39,7 +44,7 @@
 	* fvwm/ConfigFvwmSetup:
 	Mark some strings to be translated
 
-	* libs/FGettext.c (new file): 
+	* libs/FGettext.c (new file):
 	* libs/FGettext.c (new file):
 	* libs/Makefile.am:
 	gnu gettext libintl warper
